# solidity-safe-subset

./: CMakeLists.txt  README.secbit.md
cmake/: releaseSolc.cmake
libsolidity/analysis/: CallGraph.cpp  CallGraph.h  ControlFlowAnalyzer.cpp  ControlFlowAnalyzer.h  ControlFlowBuilder.cpp  StaticAnalyzer.cpp  SyntaxChecker.cpp  TypeChecker.cpp
libsolidity/ast/: AST.h  AST_accept.h  SECBITTransformer.cpp  SECBITTransformer.h  Types.cpp  Types.h
libsolidity/interface/: CompilerStack.cpp
libsolidity/parsing/: Parser.cpp  Parser.h
scripts/: solc.in
secbit-tests/: Makefile  test.mk
secbit-tests/features/array-foreach/: Makefile  expected  test.sol
secbit-tests/features/array-length/: expected  test.sol
secbit-tests/features/array-pop/: expected  test.sol
secbit-tests/features/contract-inheritance/: Makefile  expected  test.sol
secbit-tests/features/fixed-point/: expected  test.sol
secbit-tests/features/inline-asm/: expected  test.sol
secbit-tests/features/modifier/: expected  test.sol
secbit-tests/features/safemath/: expected  test.sol
secbit-tests/misc/: Makefile
secbit-tests/misc/two-stage-compilation/: Makefile  expected  test.sol
solc/: CMakeLists.txt  CommandLineInterface.cpp
